--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./dist/app",
     "build": "tsc",
-    "postinstall": "npm build"
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
