--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "tsc",
     "postinstall": "npm run build"
   },
+  "engines": {
+    "node": "9.2.x"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JonnyBoy333/luxer-server.git"
