--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "watch": false,
         "module": "commonjs",
         "target": "es6",
-        "noImplicitAny": true,
+        "noImplicitAny": false,
         "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "dist",
