--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "compression": "^1.7.1",
     "express": "^4.16.2",
     "express-validator": "^4.3.0",
+    "mailgun-js": "^0.13.1",
     "mongoose": "^4.13.0",
     "passport": "^0.4.0",
     "typescript": "^2.6.1"
