No unused variables bug

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
         "newLine": "LF",
         "baseUrl": ".",
         "noImplicitUseStrict": true,
-        "noUnusedLocals": true,
+        "noUnusedLocals": false,
         "paths": {
             "*": [
                 "node_modules/*",
