--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
-        "watch": false,
+        "watch": true,
         "module": "commonjs",
         "target": "es6",
         "noImplicitAny": false,
         "moduleResolution": "node",
-        "sourceMap": true,
+        "sourceMap": false,
         "outDir": "dist",
         "newLine": "LF",
         "baseUrl": ".",
