--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "express": "^4.16.3",
     "express-validator": "^4.3.0",
     "mongoose": "^5.0.14",
-    "typescript": "^2.8.1"
+    "typescript": "^2.8.1",
+    "@types/mongoose": "^5.0.9"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.0.9",
     "@types/compression": "0.0.35",
     "@types/express": "^4.11.1",
     "@types/node": "^8.10.7",
